# pydemetra

./: .gitignore  CLAUDE.md  Makefile  README.md  experimenting.py  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: _quarto.yml  index.qmd  objects.json  quick_start.ipynb
pydemetra/: __init__.py  _converters.py  _java.py  decomposition.py  dictionary.py  differencing.py  regarima.py  variables.py
pydemetra/_proto/: sa_pb2.py  toolkit_pb2.py
pydemetra/spec/: __init__.py
pydemetra/tests_statistical/: regular.py  seasonality.py  trading_days.py
src/pydemetra/: __init__.py  _converters.py  _java.py  _java_logging.properties  _models.py  _protobuf.py  _results.py  arima.py  calendars.py  context.py  decomposition.py  dictionary.py  differencing.py  distributions.py  regarima.py  splines.py  timeseries.py  tramoseats.py  variables.py  x13.py
src/pydemetra/_proto/: modelling_pb2.py  modelling_pb2.pyi  outliers_pb2.py  regarima_pb2.py  regarima_pb2.pyi  sa_pb2.pyi  toolkit_pb2.pyi  tramoseats_pb2.py  x13_pb2.py
src/pydemetra/spec/: benchmarking.py  regarima.py
src/pydemetra/tests_statistical/: __init__.py  regular.py  seasonality.py  trading_days.py
tests/: test_context.py  test_decomposition.py  test_dictionary.py  test_models.py  test_regarima.py  test_spec.py  test_tramoseats.py  test_x13.py
